# hyperion-obs-plugin

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  buildspec.json
.github/actions/build-plugin/: action.yml
.github/scripts/: .Brewfile  .build.zsh  .package.zsh
.github/workflows/: cleanup.yml  main.yml
cmake/: ObsPluginHelpers.cmake
data/locale/: de-DE.ini  en-US.ini
locale/: de-DE.ini  en-GB.ini  en-US.ini
package/: Windows.iss.in  macOS.pkgproj.in
resources/: resource.rc.in
src/: FlatBufferConnection.cpp  FlatBufferConnection.h  FlatBufferSchema.fbs  HyperionProperties.cpp  HyperionProperties.h  HyperionProperties.ui  HyperionProperties.ui.BACKUP  HyperionProperties.ui.old  Image.h  ImageData.h  hyperion-obs.cpp  hyperion-obs.h  hyperion_reply.fbs  hyperion_request.fbs
